--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -15,7 +15,7 @@
     <input value="name" type="text" name="name"> <br>
     <input value="login" type="email" name="login"> <br>
     <input value="password" type="password" name="pass"> <br>
-    <input type="submit" value="login">
+    <input type="submit" value="finish registration">
 </form>
 
 
